# AiAgentsWithAgno

agnoKnowledge/: agent.py  knowledge_base.py  main.py  pyproject.toml
agnoKnowledge/vector_db/lancedb/knowledge_table.lance/_transactions/: 0-0cd18358-0819-4440-9d1d-a0015b6032e6.txn
agnoKnowledge/vector_db/lancedb/knowledge_table.lance/_versions/: 1.manifest
agnoTeams/: main.py  pyproject.toml  teams_basics.py
agnoWorkflows/: looping.py  main.py  parallel.py  pyproject.toml  sequential.py
basics/: agent_1.py  agent_with_memory.py  agent_with_memory_2.py  agent_with_state.py  main.py  pyproject.toml
basics/chat_history_db/: basic_demo.db  demo.db
basics/session_state_db/: basic_demo.db  shopping.db
